--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <li>头像2</li>
     </ul>
     <p>hello</p>
-    <a href="https://www.bing.com/search?q=%E8%89%BE%E5%B0%94%E6%B5%B7%E6%A3%AE&search=&pc=LCTS&form=QBLH">艾尔海森的测试</a>
+    <a href="https://yige.baidu.com/">文心一格</a>
   </body>
 </html>
