--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <button>切换用户</button>
     <script src="scripts/main.js" defer></script>
     <h1>Alhaitham</h1>
+    <p>这张图片可以点击哦~</p>
     <img src="images/头像1.png" alt="头像"  width="300" height="300" />
-
     <p class="editor-noto">使用<strong>文心一格</strong>生成</p>
     <ul>
       <li>头像1</li>
